# cortex

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt
api/: .env.example  BUILDING_WITH_CORTEX.md  Makefile  README.md  USAGE.md  requirements.txt
api/app/: auth.py  config.py  database.py  main.py  models.py
api/app/routers/: auth.py  health.py  memory.py
api/app/services/: cortex_service.py
api/docker/: Dockerfile  docker-compose.yml
cortex/: collection_manager.py  constants.py  embedding_manager.py  ltm.py  memory_note.py  memory_system.py  processors.py  stm.py
cortex/llm_controllers/: llm_controller.py
cortex/retrieval/: retrievers.py
evaluation/: Makefile  evals.py  generate_scores.py  run_experiments.py
evaluation/metrics/: llm_judge.py  utils.py
evaluation/src/: full_context.py  utils.py
evaluation/src/cortex/: add.py  dump.py  search.py
examples/lyra/: full_query_results.json  ltm_memories.json  lyra.txt  queries.json  stm_memories.json
server/: .env.example  Dockerfile  compile_protos.py  requirements.txt  run_server.py
server/app/: auth.py  config.py  cortex_service.py  grpc_server.py  main.py  middleware.py  models.py
server/protos/: cortex.proto
server/tests/: test_api.py
